# vihara

./: .gitignore  FIN531_portfolio_management.md  LICENSE.md  README.md  conftest.py  pytest.ini
asset_pricer/: .gitignore  CMakeLists.txt  README.md
asset_pricer/examples/: demo.cpp
asset_pricer/option_pricer/orflib-0.10.0/: .gitignore  ReleaseNotes.md
asset_pricer/option_pricer/orflib-0.8.0/: .gitignore  ReleaseNotes.md
asset_pricer/option_pricer/orflib-0.9.0/: ReleaseNotes.md
asset_pricer/option_pricer/xlw-5.0.2f0/: xlw-vs15.sln
asset_pricer/src/analytics/: pnl_attribution.cpp  pnl_attribution.hpp
asset_pricer/src/core/: black.hpp  distributions.hpp  integration.hpp  optimization.hpp  option_family.hpp  valuation.hpp
asset_pricer/src/pricing/: black_scholes_merton.cpp  black_scholes_merton.hpp  monte_carlo_simulation.cpp  monte_carlo_simulation.hpp  partial_differential_equations.cpp  partial_differential_equations.hpp  variance_swap.cpp  variance_swap.hpp  variance_swap_mc.cpp  variance_swap_mc.hpp
asset_pricer/src/variance_swap/: variance_swap.cpp  variance_swap.hpp  variance_swap_mc.cpp  variance_swap_mc.hpp
asset_pricer/src/volatility/: calibration.cpp  calibration.hpp  svi.cpp  svi.hpp  volatility_surface.cpp  volatility_surface.hpp
asset_pricer/tests/: check.hpp  test_asian.cpp  test_barrier.cpp  test_binary.cpp  test_forward.cpp  test_helpers.hpp  test_integration.cpp  test_lookback.cpp  test_math.cpp  test_mc.cpp  test_optimization.cpp  test_pde.cpp  test_pnl.cpp  test_svi.cpp  test_svi_calibration.cpp  test_vanilla.cpp  test_variance_swap.cpp  test_volatility_surface.cpp
forecaster/: README.md  pyproject.toml
forecaster/forecaster/: __init__.py
forecaster/forecaster/core/: __init__.py  metrics.py  protocol.py
forecaster/forecaster/dl/: __init__.py
forecaster/forecaster/econometrics/: __init__.py
forecaster/forecaster/ml/: __init__.py
forecaster/forecaster/realized/: __init__.py  estimators.py
forecaster/forecaster/rl/: __init__.py
forecaster/forecaster/timeseries/: __init__.py  features.py  har.py
forecaster/forecaster/validation/: __init__.py  overfitting.py  splitters.py
forecaster/tests/: test_estimators.py  test_har.py  test_splitters.py
instrument_manager/: README.md  README_zh-Hans.md  data_sources.md  financial-instruments-database-design.md  instrument_family.json  instrument_types.json  instruments.cpp  pyproject.toml  schema.sql  seed_initial_universe.sql  seed_v0.sql
instrument_manager/cpp/: .gitignore  CMakeLists.txt  README.md
instrument_manager/cpp/bindings/: python_module.cpp  smoke_test.py
instrument_manager/cpp/examples/: demo.cpp
instrument_manager/cpp/tests/: test_classify.cpp  test_composition.cpp  test_projection.cpp  test_registry.cpp  test_symbology.cpp  test_validation.cpp
instrument_manager/db/: schema.sql
instrument_manager/db/seeds/: seed_examples.sql  seed_v0.sql
instrument_manager/docs/: 00-vision-and-scope.md  00-vision-and-scope_zh-Hans.md  10-layered-model.md  10-layered-model_zh-Hans.md  20-product-economics.md  20-product-economics_zh-Hans.md  30-reference-data.md  30-reference-data_zh-Hans.md  40-listing-and-venues.md  40-listing-and-venues_zh-Hans.md  50-identity-and-symbology.md  50-identity-and-symbology_zh-Hans.md  60-lifecycle.md  60-lifecycle_zh-Hans.md  70-persistence-and-cpp.md  70-persistence-and-cpp_zh-Hans.md  75-file-persistence.md  80-pricing-integration.md  80-pricing-integration_zh-Hans.md  90-roadmap-and-phasing.md  90-roadmap-and-phasing_zh-Hans.md  data-store.md  decisions.md  decisions_zh-Hans.md  domain-model.md  erd.md  identity-and-symbology.md  open-questions.md  open-questions_zh-Hans.md
instrument_manager/docs/legacy/: README.md  asset_classes.json
instrument_manager/examples/: emini-options-on-futures.md  prediction-market-election.md
instrument_manager/instrument_manager/: __init__.py  __main__.py  config.py
instrument_manager/instrument_manager/index/: __init__.py  sqlite_index.py
instrument_manager/instrument_manager/serde/: __init__.py  loader.py
instrument_manager/scripts/: generate_initial_universe_seed.py
instrument_manager/tests/: test_serde.py
ledger/: README.md  pyproject.toml
ledger/docs/: 00-vision-and-scope.md  10-syntax-subset.md  20-model-and-booking.md  30-account-taxonomy.md  40-pipeline-and-index.md  90-roadmap.md  decisions.md  open-questions.md
ledger/ledger/: __init__.py  booking.py  cli.py  config.py  errors.py  format.py  loader.py  query.py  validate.py
ledger/ledger/core/: __init__.py  account.py  inventory.py  model.py
ledger/ledger/index/: __init__.py  sqlite_index.py
ledger/ledger/parser/: __init__.py  lexer.py  parser.py
ledger/scripts/: migrate_v1.py
ledger/tables/: DDL_accounting.sql  DDL_archive.sql  DML_accounting.sql
ledger/tests/: test_bean_compat.py  test_booking.py  test_cli.py  test_format.py  test_golden_check.py  test_index.py  test_loader.py  test_migrate_v1.py  test_parser.py  test_query.py
ledger/tests/golden/: average.beancount  basic.beancount  trading.beancount
ledger/views/: view_all_accounts.sql  view_all_transactions.sql
portfolio_manager/: .env.example  pyproject.toml
portfolio_manager/db/: portfolio_records_schema.sql
portfolio_manager/docs/: decisions.md  decisions_zh-Hans.md  import-format-v1_zh-Hans.md  ledger-bridge.md  open-questions.md  open-questions_zh-Hans.md  portfolio-data-layout.md  portfolio-records-v2_zh-Hans.md
portfolio_manager/portfolio_manager/: __init__.py
portfolio_manager/portfolio_manager/analytics/: __init__.py  performance.py
portfolio_manager/portfolio_manager/engine/: __init__.py  clock.py  engine.py  (+2 more)
portfolio_manager/scripts/: create_sample_records_db.py  import_fx_rates.py  import_trades.py  run_records_web.py
portfolio_manager/templates/: trades_import_v1.csv
portfolio_manager/tests/: test_cashflows.py  test_dividend_dedup.py  test_engine.py  test_fx_summary.py  test_import_service.py  test_imports.py  test_ledger_bridge.py  test_portfolio.py  test_rebuild.py  test_records.py  test_records_api.py  test_records_sqlite.py
(+249 files in other folders)
