[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "portfolio_manager"
version = "0.0.1"
description = "Backtesting + runtime: one engine drives a strategy over historical or live data via swappable clock/data/execution adapters, with accounting, risk and performance analytics."
requires-python = ">=3.11"
dependencies = ["numpy>=1.24", "forecaster", "ledger"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]
web = ["fastapi>=0.111", "uvicorn>=0.30"]

[tool.setuptools.packages.find]
include = ["portfolio_manager*"]
